CSS: Fix props height being clipped to 300px, take 2

--- a/bin/style.less
+++ b/bin/style.less
@@ -465,6 +465,7 @@ input[type=checkbox] {
 /* Properties */
 
 .hide-properties {
+	flex : 1 0 300px;
 	padding:10px;
 	overflow:auto;
 	padding-bottom:80px;
